Fix OAuth redirect configuration

--- a/index.html
+++ b/index.html
@@ -1240,10 +1240,7 @@
             
             try {
                 const { error } = await supabaseClient.auth.signInWithOAuth({
-                    provider: 'google',
-                    options: {
-                        redirectTo: window.location.origin
-                    }
+                    provider: 'google'
                 })
                 if (error) throw error
             } catch (error) {
